# GraphFlow

./: .gitattributes  .gitignore  README.md  start.bat  start.sh  项目设计.txt
backend/: pyproject.toml
backend/app/: auth.py  cli.py  config.py  crypto.py  db.py  events.py  llm_clients.py  main.py  models.py  thinking.py
backend/tests/: conftest.py  test_admin_api.py  test_adversarial_data.py  test_agent_api.py  test_agent_codegen.py  test_agent_dataset_tools.py  test_agent_e2e.py  test_agent_extract.py  test_agent_factory.py  test_agent_goal.py  test_agent_goal_e2e.py  test_agent_models_events.py  test_agent_orchestrator.py  test_agent_prompts.py  test_agent_sandbox.py  test_agent_skills.py  test_agent_system.py  test_agent_tools.py  test_agent_turns.py  test_assistant_context.py  test_auth.py  test_auto_process.py  test_bulk_delete.py  test_catalog.py  test_cli.py  test_cli_node_robustness.py  test_cli_state_env.py  test_codegen_columns.py  test_codegen_preview_tools.py  test_columns.py  test_columns_qc_feedback.py  test_columns_resolve.py  test_compact_seams.py  test_compactor.py  test_config.py  test_data_preview.py  test_dataset_crud_versions.py  test_dataset_service.py  test_dataset_store.py  test_dataset_tools.py  (+64 more)
backend/tools/: agent_node_tools_live.py  agent_phase2_live.py  bughunt.py  bughunt2.py  complex_excel_e2e.py  complex_excel_live.py  goal_loop_live.py  http_fetch_polling_live.py  inputless_gen_live.py  large_dataset_live.py  live_edge_probe.py  make_complex_excel.py  repro_bugC.py  smoke_goal_deepseek.py  stress_real_chain.py
frontend/: package.json  (+2 more)
(+200 files in other folders)
